# eld-sfml-game

./: CMakeLists.txt
.zed/: debug.json  settings.json  tasks.json
src/: Game.cpp  Game.h  Window.cpp  Window.h  logger.h  main.cpp  tostring.h
src/util/: tostring.h
